@@ -1,24 +1,0 @@
-%%
-%% root for draft documents
-%%
-
-\documentclass[10pt,a4paper]{article}
-\usepackage{isabelle,isabellesym,pdfsetup}
-
-%packages for unusual symbols according to 'isabelle latex -o syms'
-\usepackage{amssymb}
-\usepackage{textcomp}
-
-\pagestyle{myheadings}
-\newcommand{\isamarkupfile}[1]%
-{{\def\isacharunderscore{\mbox{-}}%
-\section*{#1}\markright{FILE~``\isabellecontext''}}}
-
-\begin{document}
-\input{session}
-\end{document}
-
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
